<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <com.ruoqian.brainidphoto.view.TopHeaderView
        android:id="@+id/topHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlUserInfo"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="@dimen/panding_16"
                android:layout_marginTop="@dimen/panding_18"
                android:layout_marginRight="@dimen/panding_16"
                android:layout_marginBottom="@dimen/panding_12"
                android:background="@drawable/common_radis_bg">
                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:src="@mipmap/icon_defalut_avatar"
                    android:scaleType="centerCrop"
                    android:layout_centerVertical="true"
                    android:background="@drawable/user_avatar_border"
                    android:padding="@dimen/line"
                    android:layout_marginLeft="@dimen/panding_15"
                    android:layout_marginRight="@dimen/panding_13"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/ivAvatar">
                    <TextView
                        android:id="@+id/tvNickName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_15"
                        android:textColor="@color/theme_black"
                        android:letterSpacing="0.03"/>

                    <TextView
                        android:id="@+id/tvMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/panding_3"
                        android:textColor="@color/colorAAA"
                        android:textSize="@dimen/textsize_13"
                        android:letterSpacing="0.03"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/panding_16"
                android:layout_marginLeft="@dimen/panding_16"
                android:background="@drawable/common_radis_bg"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvAccount"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/theme_black"
                    android:letterSpacing="0.03"
                    android:drawableLeft="@mipmap/icon_account"
                    android:drawableRight="@mipmap/icon_right_arrow"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:drawablePadding="@dimen/panding_10"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_touch_selector"
                    android:text="@string/my_account" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line"
                    android:background="@color/color_transparent_06"
                    android:layout_marginLeft="@dimen/panding_32"/>

                <TextView
                    android:id="@+id/tvOrder"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/theme_black"
                    android:letterSpacing="0.03"
                    android:drawableLeft="@mipmap/icon_order"
                    android:drawableRight="@mipmap/icon_right_arrow"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:drawablePadding="@dimen/panding_10"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_touch_selector"
                    android:text="@string/my_order" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/panding_16"
                android:layout_marginLeft="@dimen/panding_16"
                android:layout_marginTop="@dimen/panding_12"
                android:layout_marginBottom="@dimen/panding_12"
                android:background="@drawable/common_radis_bg"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/theme_black"
                    android:letterSpacing="0.03"
                    android:drawableLeft="@mipmap/icon_customer"
                    android:drawableRight="@mipmap/icon_right_arrow"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:drawablePadding="@dimen/panding_10"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_touch_selector"
                    android:text="@string/my_customer" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line"
                    android:background="@color/color_transparent_06"
                    android:layout_marginLeft="@dimen/panding_32"/>

                <TextView
                    android:id="@+id/tvFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/theme_black"
                    android:letterSpacing="0.03"
                    android:drawableLeft="@mipmap/icon_feedback"
                    android:drawableRight="@mipmap/icon_right_arrow"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:drawablePadding="@dimen/panding_10"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_touch_selector"
                    android:text="@string/my_feedback" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line"
                    android:background="@color/color_transparent_06"
                    android:layout_marginLeft="@dimen/panding_32"/>

                <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/theme_black"
                    android:letterSpacing="0.03"
                    android:drawableLeft="@mipmap/icon_setting"
                    android:drawableRight="@mipmap/icon_right_arrow"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:drawablePadding="@dimen/panding_10"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_touch_selector"
                    android:text="@string/my_setting" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>