<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".activity.SearchActivity">
    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/bg_home"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.ruoqian.brainidphoto.view.TopHeaderView
                android:id="@+id/topHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:id="@+id/rlSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/panding_40"
                android:background="@drawable/search_bg"
                android:layout_marginTop="@dimen/panding_8"
                android:layout_marginRight="@dimen/panding_16"
                android:layout_marginLeft="@dimen/panding_16">

                <ImageButton
                    android:id="@+id/ibtnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/icon_search"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_touch_selector"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:layout_centerVertical="true"/>
                <View
                    android:id="@+id/viewSearchLine"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/panding_11"
                    android:background="@color/color999"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/ibtnSearch"/>

                <com.ruoqian.lib.view.ClearEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:textColor="@color/theme_black"
                    android:textColorHint="@color/color999"
                    android:textSize="@dimen/textsize_12"
                    android:letterSpacing="0.03"
                    android:paddingLeft="@dimen/panding_15"
                    android:paddingRight="@dimen/panding_15"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:layout_toLeftOf="@id/viewSearchLine"
                    android:hint="@string/search_idphoto_hint"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:overScrollMode="never">
            <LinearLayout
                android:id="@+id/llHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/panding_16"
                    android:layout_marginLeft="@dimen/panding_16"
                    android:layout_marginTop="@dimen/panding_20">
                    <TextView
                        android:id="@+id/tvHistoryTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idphoto_search_history"
                        android:letterSpacing="0.03"
                        android:layout_centerVertical="true"
                        android:textColor="@color/theme_black"
                        android:textSize="@dimen/textsize_16"/>

                    <ImageButton
                        android:id="@+id/ibtnClearHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_touch_selector"
                        android:src="@mipmap/icon_search_history_delete"
                        android:scaleType="centerCrop"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <com.ruoqian.lib.view.FlowLayout
                    android:id="@+id/flHistorys"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/panding_7"
                    android:layout_marginLeft="@dimen/panding_7"
                    android:layout_marginTop="@dimen/panding_6">
                </com.ruoqian.lib.view.FlowLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tvHotTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_recommend"
                android:letterSpacing="0.03"
                android:textColor="@color/theme_black"
                android:layout_marginTop="@dimen/panding_20"
                android:layout_marginRight="@dimen/panding_16"
                android:layout_marginLeft="@dimen/panding_16"
                android:textSize="@dimen/textsize_16"/>

            <com.ruoqian.lib.view.FlowLayout
                android:id="@+id/flSpecs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/panding_7"
                android:layout_marginLeft="@dimen/panding_7"
                android:layout_marginTop="@dimen/panding_7">
            </com.ruoqian.lib.view.FlowLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>